fix navbar alignment for production build

--- a/public/scss/layout/_header.scss
+++ b/public/scss/layout/_header.scss
@@ -60,7 +60,7 @@
 			justify-content: center;
 
 			@include respond("md") {
-				justify-content: flex-start;
+				justify-content: space-around;
 			}
 		}
 
